Fixed word wrap on Twitter feed at bottom, removed Our Value sign, added FB and Twitter share on register

--- a/mycleancity/static/css/mycleancity.css
+++ b/mycleancity/static/css/mycleancity.css
@@ -536,7 +536,7 @@ div.table-container #invitees-table tr td.roles {  }
 	Twitter Feed
 ******************************/ 
 #tweets { float: left; overflow: hidden; }
-#tweets ul li { display: block; width: 300px; margin: 0 27px; position:relative; float: left;  }
+#tweets ul li { display: block; width: 300px; margin: 0 27px; position:relative; float: left; word-wrap: break-word;  }
 
 /******************************
 	Countdown
